interpol/parser.js
(typeof module==='object'?module:this.$interpol=this.$interpol||{})[typeof module==='object'?'exports':'parser'] = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(m) {
              return { i: 'interpol', v: -1, l: lits, n: m };
            },
        peg$c1 = peg$FAILED,
        peg$c2 = "def",
        peg$c3 = { type: "literal", value: "def", description: "\"def\"" },
        peg$c4 = void 0,
        peg$c5 = "from",
        peg$c6 = { type: "literal", value: "from", description: "\"from\"" },
        peg$c7 = "import",
        peg$c8 = { type: "literal", value: "import", description: "\"import\"" },
        peg$c9 = "as",
        peg$c10 = { type: "literal", value: "as", description: "\"as\"" },
        peg$c11 = "for",
        peg$c12 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c13 = "in",
        peg$c14 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c15 = "if",
        peg$c16 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c17 = "else",
        peg$c18 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c19 = "end",
        peg$c20 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c21 = "true",
        peg$c22 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c23 = "false",
        peg$c24 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c25 = "or",
        peg$c26 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c27 = "and",
        peg$c28 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c29 = "lt",
        peg$c30 = { type: "literal", value: "lt", description: "\"lt\"" },
        peg$c31 = "gt",
        peg$c32 = { type: "literal", value: "gt", description: "\"gt\"" },
        peg$c33 = "le",
        peg$c34 = { type: "literal", value: "le", description: "\"le\"" },
        peg$c35 = "ge",
        peg$c36 = { type: "literal", value: "ge", description: "\"ge\"" },
        peg$c37 = "not",
        peg$c38 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c39 = function(id) {
              return lit(id);
            },
        peg$c40 = [],
        peg$c41 = function(start, cont) {
              return start + cont.join('');
            },
        peg$c42 = /^[$__a-zA-Z]/,
        peg$c43 = { type: "class", value: "[$__a-zA-Z]", description: "[$__a-zA-Z]" },
        peg$c44 = /^[$__a-zA-Z0-9]/,
        peg$c45 = { type: "class", value: "[$__a-zA-Z0-9]", description: "[$__a-zA-Z0-9]" },
        peg$c46 = /^[0-9]/,
        peg$c47 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c48 = /^[1-9]/,
        peg$c49 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c50 = function(h, t) {
              return h + t.join('');
            },
        peg$c51 = /^[eE]/,
        peg$c52 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c53 = null,
        peg$c54 = /^[\-+]/,
        peg$c55 = { type: "class", value: "[\\-+]", description: "[\\-+]" },
        peg$c56 = function(s, d) {
              return 'e' + (s ? s : '') + d.join('');
            },
        peg$c57 = ".",
        peg$c58 = { type: "literal", value: ".", description: "\".\"" },
        peg$c59 = function(d) {
              return '.' + d.join('');
            },
        peg$c60 = function(c, f, e) {
              return lit(parseFloat(c + (f ? f : '') + (e ? e : '')));
            },
        peg$c61 = { type: "any", description: "any character" },
        peg$c62 = /^[\t\x0B\f ]/,
        peg$c63 = { type: "class", value: "[\\t\\x0B\\f ]", description: "[\\t\\x0B\\f ]" },
        peg$c64 = /^[\n\r]/,
        peg$c65 = { type: "class", value: "[\\n\\r]", description: "[\\n\\r]" },
        peg$c66 = "#",
        peg$c67 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c68 = "\"\"\"",
        peg$c69 = { type: "literal", value: "\"\"\"", description: "\"\\\"\\\"\\\"\"" },
        peg$c70 = function(c) { return c; },
        peg$c71 = function(chars) {
              return lit(chars.join(''));
            },
        peg$c72 = "'''",
        peg$c73 = { type: "literal", value: "'''", description: "\"'''\"" },
        peg$c74 = "\"",
        peg$c75 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c76 = "\"\"",
        peg$c77 = { type: "literal", value: "\"\"", description: "\"\\\"\\\"\"" },
        peg$c78 = /^[^"\n\r\u2028\u2029]/,
        peg$c79 = { type: "class", value: "[^\"\\n\\r\\u2028\\u2029]", description: "[^\"\\n\\r\\u2028\\u2029]" },
        peg$c80 = "'",
        peg$c81 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c82 = "''",
        peg$c83 = { type: "literal", value: "''", description: "\"''\"" },
        peg$c84 = /^[^'\n\r\u2028\u2029]/,
        peg$c85 = { type: "class", value: "[^'\\n\\r\\u2028\\u2029]", description: "[^'\\n\\r\\u2028\\u2029]" },
        peg$c86 = "||",
        peg$c87 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c88 = function() { return 'or'; },
        peg$c89 = "&&",
        peg$c90 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c91 = function() { return 'an'; },
        peg$c92 = "==",
        peg$c93 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c94 = function() { return 'eq'; },
        peg$c95 = "!=",
        peg$c96 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c97 = function() { return 'nq'; },
        peg$c98 = function() { return 'lt'; },
        peg$c99 = function() { return 'gt'; },
        peg$c100 = function() { return 'le'; },
        peg$c101 = function() { return 'ge'; },
        peg$c102 = "+",
        peg$c103 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c104 = function() { return 'ad'; },
        peg$c105 = "-",
        peg$c106 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c107 = function() { return 'su'; },
        peg$c108 = "*",
        peg$c109 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c110 = function() { return 'mu'; },
        peg$c111 = "/",
        peg$c112 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c113 = function() { return 'di'; },
        peg$c114 = function() { return 'ne'; },
        peg$c115 = "!",
        peg$c116 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c117 = function() { return 'no'; },
        peg$c118 = function() {
              return lit(' ');
            },
        peg$c119 = function() { return ' '; },
        peg$c120 = function() { return '\n'; },
        peg$c121 = function(s) {
              var res = s.join('');
              if ( !res.length ) {
                return null;
              }
              return res.indexOf('\n') !== -1 ? lit('\n') : lit(' ');
            },
        peg$c122 = function(s) { return [lit('im'), s]; },
        peg$c123 = function(statements) {
              var results = [];
              for ( var i = 0, len = statements.length; i < len; i++ ) {
                results.push(statements[i][0]);
                if ( statements[i][1] !== null ) {
                  results.push([lit('ou'), statements[i][1]]);
                }
              }
              return results;
            },
        peg$c124 = function(s, ws) {
              return [s, ws];
            },
        peg$c125 = function(s) {
              return [s, null];
            },
        peg$c126 = function(s) {
              return s;
            },
        peg$c127 = "<",
        peg$c128 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c129 = function(a) { return a; },
        peg$c130 = function(tag, attrs, t) {
              return [lit('op'), tag, attrs, t];
            },
        peg$c131 = "(",
        peg$c132 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c133 = ")",
        peg$c134 = { type: "literal", value: ")", description: "\")\"" },
        peg$c135 = function(e) {
              return e;
            },
        peg$c136 = "/>",
        peg$c137 = { type: "literal", value: "/>", description: "\"/>\"" },
        peg$c138 = function() { return 1; },
        peg$c139 = ">",
        peg$c140 = { type: "literal", value: ">", description: "\">\"" },
        peg$c141 = function() { return 0; },
        peg$c142 = "=",
        peg$c143 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c144 = function(e) { return e; },
        peg$c145 = function(name, value) {
              return [name, value === null ? lit(null) : value];
            },
        peg$c146 = "</",
        peg$c147 = { type: "literal", value: "</", description: "\"</\"" },
        peg$c148 = function(tag) {
              return [lit('cl'), tag];
            },
        peg$c149 = "<!--",
        peg$c150 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c151 = "-->",
        peg$c152 = { type: "literal", value: "-->", description: "\"-->\"" },
        peg$c153 = function(comment) {
              return [lit('ct'), lit(comment.join(''))];
            },
        peg$c154 = ":",
        peg$c155 = { type: "literal", value: ":", description: "\":\"" },
        peg$c156 = function(id, params, stmt) {
              return [lit('de'), id, params, [stmt]];
            },
        peg$c157 = function(id, params, stmts) {
              return [lit('de'), id, params, stmts];
            },
        peg$c158 = function(params) {
              return params;
            },
        peg$c159 = function() {
              return [];
            },
        peg$c160 = ",",
        peg$c161 = { type: "literal", value: ",", description: "\",\"" },
        peg$c162 = function(id) { return id; },
        peg$c163 = function(start, cont) {
              return [start].concat(cont);
            },
        peg$c164 = function(id, imports) {
              return [lit('im'), id, imports];
            },
        peg$c165 = function(item) { return item; },
        peg$c166 = function(name, alias) {
              return [name, alias];
            },
        peg$c167 = function(ranges, stmt) {
              return [lit('fr'), ranges, [stmt]];
            },
        peg$c168 = function(ranges, stmts) {
              return [lit('fr'), ranges, stmts];
            },
        peg$c169 = function(r) { return r; },
        peg$c170 = function(id, col) {
              return [id, col];
            },
        peg$c171 = function(expr, stmt) {
              return [lit('cn'), expr, [stmt], [lit(null)]];
            },
        peg$c172 = function(expr, stmts, tail) {
              return [lit('cn'), expr, stmts, tail];
            },
        peg$c173 = function(s) {
              return [s];
            },
        peg$c174 = function(i) {
              return [i];
            },
        peg$c175 = function(stmts) {
              return stmts;
            },
        peg$c176 = function() {
              return [lit(null)];
            },
        peg$c177 = function(e) { return [lit('ou'), e]; },
        peg$c178 = "%",
        peg$c179 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c180 = function(r) { return [lit('fm'), r]; },
        peg$c181 = function(head, tail) {
              return buildBinaryChain(head, tail);
            },
        peg$c182 = "?",
        peg$c183 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c184 = function(cond, tval, fval) {
              return [lit('cn'), cond, tval, fval];
            },
        peg$c185 = function(op, r) { return [lit(op), r]; },
        peg$c186 = function(op, expr) {
              return [lit(op), expr];
            },
        peg$c187 = function(id, args) {
              return [lit('ca'), id, args];
            },
        peg$c188 = function(elems) {
              return [lit('tu'), elems];
            },
        peg$c189 = function(expr, elem) {
              return [lit('mb'), expr, elem];
            },
        peg$c190 = "[",
        peg$c191 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c192 = "]",
        peg$c193 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c194 = function(elems) {
              if ( elems.length > 1 ) {
                return [lit('tu'), elems];
              }
              return elems[0];
            },
        peg$c195 = function() { return lit(true); },
        peg$c196 = function() { return lit(false); },
        peg$c197 = function(id) {
              return [lit('id'), id];
            },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsemodule();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseDef() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseIdentCont();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = peg$c4;
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseFrom() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c5) {
        s1 = peg$c5;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseIdentCont();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = peg$c4;
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseImport() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 6) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 6;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseIdentCont();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = peg$c4;
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseAs() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c9) {
        s1 = peg$c9;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseIdentCont();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = peg$c4;
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseFor() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c11) {
        s1 = peg$c11;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseIdentCont();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = peg$c4;
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseIn() {
      var s0, s1, s2, s3;
